updated contact page to have links and fixed line break

--- a/public/contact/index.html
+++ b/public/contact/index.html
@@ -34,7 +34,7 @@
 
 
 
-<link href="/westviewmakeawish.github.io/css/custom.css?1707342592" rel="stylesheet">
+<link href="/westviewmakeawish.github.io/css/custom.css?1707378190" rel="stylesheet">
 
 
 
@@ -303,8 +303,8 @@
             <section>
 
                 <h1 id="westview-make-a-wish">Westview Make a Wish</h1>
-<p>Email: jessica_collyer@beaverton.k12.or.us
-Phone: 503 292 2280</p>
+<p>Email: <a href="mailto:jessica_collyer@beaverton.k12.or.us">jessica_collyer@beaverton.k12.or.us</a><br>
+Make a Wish Foundation Phone Number: <a href="tel:+15032922280">(503) 292-2280</a></p>
 
 
                 
